Fixed overflowing of labels when main window was resized. Version bumped to 1.4.1

--- a/src/distributionbuilder.css
+++ b/src/distributionbuilder.css
@@ -57,6 +57,7 @@
     text-align: center;
     font-size: 0.8em;
     flex: 1;
+    min-width: 0;
 }
 
 /* Buttons */
@@ -84,6 +85,24 @@
     padding: 0 !important;
     line-height: 1 !important;
     background-color: lightgrey;
+}
+
+/* Totals */
+
+.totals {
+  background-color: #FF4500;
+}
+
+.totals > .distrow {
+  display: flex;
+}
+
+.distbuilder > .totals > .distrow > .total {
+    color: white;
+    float: left;
+    text-align: center;
+    font-size: 0.8em;
+    flex: 1;
 }
 
 /* Totals */
